syntax = "proto3";

option go_package = "proto/tour";
import "google/protobuf/timestamp.proto";

service MarketplaceTour {
  rpc GetPublishedTours (Page) returns (TourResponseList) {}
  rpc GetAuthorTours (AuthorId) returns (TourResponseList) {}
  rpc GetTour (TourId) returns (TourResponse) {}
}

message Page {
    int32 page = 1;
    int32 pageSize = 2;
}

message TourResponseList{
    repeated TourResponse TourResponses = 1;
}

message TourId{
    int64 tourId = 1;
}

message TourResponse {
    int64 id = 1;
    int64 authorId = 2;
    string name = 3;
    string description = 4;
    int32 difficulty = 5;
    repeated string tags = 6;
    enum TourStatus {
        Draft = 0;
        Published = 1;
        Archived = 2;
        Ready = 3;
    }
    TourStatus status = 7;
    double price = 8;
    bool isDeleted = 9;
    double distance = 10;
    double averageRating = 11;
    repeated KeyPointResponse keyPoints = 12;
    repeated TourDuration durations = 13;
    google.protobuf.Timestamp publishDate = 14;
    google.protobuf.Timestamp archiveDate = 15;
    enum TourCategory {
        Adventure = 0;
        FamilyTrips = 1;
        Cruise = 2;
        Cultural = 3;
    }
    TourCategory category = 16;
}

message KeyPointResponse {
    int64 id = 1;
    int64 tourId = 2;
    string name = 3;
    string description = 4;
    double longitude = 5;
    double latitude = 6;
    string locationAddress = 7;
    string imagePath = 8;
    int64 order = 9;
    bool haveSecret = 10;
    KeyPointSecretResponse secret = 11;
}

message KeyPointSecretResponse {
    repeated string images = 1;
    string description = 2;
}

message TourDuration {
    int32 duration = 1;
    enum TransportType {
        Walking = 0;
        Bicycle = 1;
        Car = 2;
    }
    TransportType transportType = 2;
}

message AuthorId{
    int64 authorId = 1;
}
